--- a/src/components/CustomButton/CustomButton.scss
+++ b/src/components/CustomButton/CustomButton.scss
@@ -10,6 +10,8 @@
     color: white;
     text-transform: uppercase;
     font-weight: bolder;
+    word-break: break-all;
+    white-space: nowrap;
     border: none;
     cursor: pointer;
 
